add: add UserNotFoundException and handle errors