@@ -17,19 +17,17 @@ import java.util.stream.Collectors;
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
-        Map<String, Object> body = new LinkedHashMap<>();
-        body.put("timeStamp", System.currentTimeMillis());
-        body.put("status", status.value());
-
+        Map<String,Object> body = new LinkedHashMap<>();
+        body.put("timeStamp",System.currentTimeMillis());
+        body.put("status",status.value());
+        // get all the errors
         List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(x -> x.getDefaultMessage())
-                .toList();
-
-        body.put("errors", errors);
+                .collect(Collectors.toList());
+        body.put("errors",errors);
         return new ResponseEntity<>(body, headers, status);
-
     }
 }
 
